objects/Form__c.object
<CustomObject>
    <fields>
        <fullName>Monitoring_Notes__c</fullName>
        <label>Monitoring Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Comments_EE_Installation_JCO__c</fullName>
        <description>Notes/Comments ELECTRICAL EQUIPMENT INSTALLATION</description>
        <inlineHelpText>Notes/Comments ELECTRICAL EQUIPMENT INSTALLATION</inlineHelpText>
        <label>Notes/Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Comments_JCO__c</fullName>
        <label>Notes/Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Comments_PV_Installation_JCO__c</fullName>
        <description>Notes/Comments PV Installation</description>
        <inlineHelpText>Notes/Comments PV Installation</inlineHelpText>
        <label>Notes/Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Comments_Punch_List__c</fullName>
        <description>MONITORING and AS-BUILTS</description>
        <inlineHelpText>MONITORING and AS-BUILTS</inlineHelpText>
        <label>Notes/Comments/Punch List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Comments_Rail_Intallation_JCO__c</fullName>
        <description>Notes/Comments RAIL INSTALLATION</description>
        <inlineHelpText>Notes/Comments RAIL INSTALLATION</inlineHelpText>
        <label>Notes/Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_yes_or_no_and_which_Structure__c</fullName>
        <description>**Unpermitted Structures** Notes yes or no and which Structure? :</description>
        <inlineHelpText>**Unpermitted Structures** Notes yes or no and which Structure? :</inlineHelpText>
        <label>Notes yes or no and which Structure?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Solar_Panels__c</fullName>
        <label>Number of Solar Panels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlet_available_at_router_for_PLC__c</fullName>
        <label>Outlet available at router for PLC?:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overhead_Service_PicID__c</fullName>
        <label>Overhead Service Pic ID:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overhead_Service_Pic_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overhead Service Pic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overhead_Service__c</fullName>
        <label>Overhead Service</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PVS5_PVS2_and_associated_equipment_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have the PVS5/PVS2 and associated equipment been installed per Standards?</description>
        <inlineHelpText>Have the PVS5/PVS2 and associated equipment been installed per Standards?</inlineHelpText>
        <label>PVS5/PVS2 and associated equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PV_Breaker_Feeding_Existing_System__c</fullName>
        <label>PV Breaker Feeding Existing System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Manufacturer__c</fullName>
        <label>Panel Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>SunPower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-SunPower panels</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pets_on_site_to_consider__c</fullName>
        <label>Pets on site to consider?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_of_physical_address_number_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Photo of physical address (number) with the home in the background</description>
        <inlineHelpText>Photo of physical address (number) with the home in the background</inlineHelpText>
        <label>Photo of physical address (number)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Photos_of_all_modules_installed_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did you get photos of all modules installed, the PVS/Inverter, and the address?</description>
        <inlineHelpText>Did you get photos of all modules installed, the PVS/Inverter, and the address?</inlineHelpText>
        <label>Photos of all modules installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picture_of_As_Built_Drawing_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Picture of As-Built Drawing clearly showing circuit layout on array map</description>
        <inlineHelpText>Picture of As-Built Drawing clearly showing circuit layout on array map</inlineHelpText>
        <label>Picture of As-Built Drawing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picture_of_Solar_Layout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Picture of Solar Layout with microinverter Serial Number Map (STICKERS)</description>
        <inlineHelpText>Picture of Solar Layout with microinverter Serial Number Map (STICKERS)</inlineHelpText>
        <label>Picture of Solar Layout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pool_Piping_or_AC_UnitsID__c</fullName>
        <label>Pool Piping or AC Units ID:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pool_Piping_or_AC_Units_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pool Piping or AC Units</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Poor_Underpayment__c</fullName>
        <label>Poor Underpayment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_POI__c</fullName>
        <label>Preferred POI?</label>
        <picklist>
            <picklistValues>
                <fullName>Main</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Photo_Notes__c</fullName>
        <label>Property Photo Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pull_Back_Shot_of_Outlet_Near_Router_ID__c</fullName>
        <label>Pull Back Shot of Outlet Near Router ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pull_Back_Shot_of_Outlet_Near_Router_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pull Back Shot of Outlet Near Router</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pull_back_Shot_of_Router_ID__c</fullName>
        <label>Pull back Shot of Router ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pull_back_Shot_of_Router_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pull back Shot of Router</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Red_Flag_Notes__c</fullName>
        <label>Red Flag Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Red_Flag_Pic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Red Flag Pic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Right_Side_of_HomeID__c</fullName>
        <label>Right Side of Home ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Right_Side_of_Home_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Right Side of Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Condition_Issues__c</fullName>
        <description>Roof Condition Issues - Potential re-roof?</description>
        <inlineHelpText>Roof Condition Issues - Potential re-roof?</inlineHelpText>
        <label>Roof Condition Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Condition_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Condition Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Router_Location_Distance_from_BOS_notes__c</fullName>
        <label>Router Location/Distance from BOS notes:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPRI_Office_JCO__c</fullName>
        <label>SPRI Office</label>
        <picklist>
            <picklistValues>
                <fullName>Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fremont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ontario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaheim</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Showing_10_of_either_side_of_the_MSPSID__c</fullName>
        <description>Picture Showing 10&apos; of either side of the MSP:</description>
        <inlineHelpText>Picture Showing 10&apos; of either side of the MSP:</inlineHelpText>
        <label>Showing 10&apos; of either side of the MSP ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Showing_10_of_either_side_of_the_MSP_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Showing 10&apos; of either side of the MSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By Signing below, I approve to move this project to INSPECTION:</description>
        <inlineHelpText>By Signing below, I approve to move this project to INSPECTION:</inlineHelpText>
        <label>Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Address_City_JCO__c</fullName>
        <label>Site Address (City)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Address_number_and_street_JCO__c</fullName>
        <label>Site Address (number and street)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Survey_Notes_Customer_Property__c</fullName>
        <description>Install Site Survey Notes / Customer Property Requests :</description>
        <inlineHelpText>Install Site Survey Notes / Customer Property Requests :</inlineHelpText>
        <label>Site Survey Notes / Customer Property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Survey_Performed_by__c</fullName>
        <label>Site Survey Performed by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smoke_Carbon_Monoxide_to_Code__c</fullName>
        <description>Smoke/Carbon Monoxide to Code? If not, note how many needed below.:</description>
        <inlineHelpText>Smoke/Carbon Monoxide to Code? If not, note how many needed below.:</inlineHelpText>
        <label>Smoke/Carbon Monoxide to Code?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smoke_Carbon_Notes_if_needed__c</fullName>
        <inlineHelpText>Smoke/Carbon Notes if needed:</inlineHelpText>
        <label>Smoke/Carbon Notes if needed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solar_Access_Average_Roof_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solar Access Average Roof 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solar_Access_Average_Roof_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solar Access Average Roof 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solar_Access_Average_Roof_4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solar Access Average Roof 4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solar_Access_Average_Roof__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solar Access Average Roof 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solar_Breakers_installed_match_SLD_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the Solar Breakers installed match the SLD?</description>
        <inlineHelpText>Does the Solar Breakers installed match the SLD?</inlineHelpText>
        <label>Solar Breakers installed match the SLD?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solar_Sub_Panel_when_present_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Solar Sub Panel (when present)– Show breakers and labels</description>
        <inlineHelpText>Solar Sub Panel (when present)– Show breakers and labels</inlineHelpText>
        <label>Solar Sub Panel (when present)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Space_for_PV_Backfeed__c</fullName>
        <label>Space for PV Backfeed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SystemFullyCommissionedThroughStep5_JCO__c</fullName>
        <label>System Fully Commissioned through Step 5</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_properly_grounded_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the system properly grounded per NEC requirements and to match the Plan Set?</description>
        <inlineHelpText>Is the system properly grounded per NEC requirements and to match the Plan Set?</inlineHelpText>
        <label>System properly grounded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transformer_on_Property__c</fullName>
        <label>Transformer on Property</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trenching_Required__c</fullName>
        <label>Trenching Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ufer_or_Ground_RodID__c</fullName>
        <label>Ufer or Ground Rod ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ufer_or_Ground_Rod_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ufer or Ground Rod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upgrade_Existing_Grounding__c</fullName>
        <label>Upgrade Existing Grounding?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utility_Meter_PictureID__c</fullName>
        <label>Utility Meter Picture ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Meter_Picture_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Utility Meter Picture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Water_Bond_or_Gas_Bond__c</fullName>
        <label>Water Bond or Gas Bond?</label>
        <picklist>
            <picklistValues>
                <fullName>Water bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas bond</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Water_or_Gas_Bond_PicID__c</fullName>
        <label>Water or Gas Bond Pic ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Water_or_Gas_Bond_Pic_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Water or Gas Bond Pic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Where_is_the_Outlet__c</fullName>
        <label>Where is the Outlet?:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WiFi_Boosters_currently_installed__c</fullName>
        <label>WiFi Boosters currently installed?:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wide_angle_of_main_panel_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wide angle of main panel showing all circuits, Main breaker, and labels</description>
        <inlineHelpText>Wide angle of main panel showing all circuits, Main breaker, and labels</inlineHelpText>
        <label>Wide angle of main panel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wifi_Booster_Locations__c</fullName>
        <label>Wifi Booster Locations:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wire_management_1_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wire management- Show wires/cables under array</description>
        <inlineHelpText>Wire management- Show wires/cables under array</inlineHelpText>
        <label>Wire management (1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wire_management_2_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wire management- Show wires/cables under array</description>
        <inlineHelpText>Wire management- Show wires/cables under array</inlineHelpText>
        <label>Wire management (2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wires_Spliced_to_Service_FeedID__c</fullName>
        <label>Wires Spliced to Service Feed ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wires_Spliced_to_Service_Feed_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wires Spliced to Service Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X20_Pull_back_of_MSP_area__c</fullName>
        <description>20&apos; Pull back of MSP area (Gas,Gate, Obstructions) :</description>
        <inlineHelpText>20&apos; Pull back of MSP area (Gas,Gate, Obstructions) :</inlineHelpText>
        <label>20&apos; Pull back of MSP area</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X20_Pull_back_of_MSP_area_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>20&apos; Pull back of MSP area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>all_modules_installed_secured_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are all modules installed/secured to manufacturers installation methods?</description>
        <inlineHelpText>Are all modules installed/secured to manufacturers installation methods?</inlineHelpText>
        <label>all modules installed/secured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>all_terminations_securely_landed_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are all terminations securely landed on terminal lugs to the correct torque?:</description>
        <inlineHelpText>Are all terminations securely landed on terminal lugs to the correct torque?:</inlineHelpText>
        <label>All terminations securely landed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>close_up_of_PVS5_Inverter_Serial_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>close up of PVS5 / Inverter Serial number</description>
        <inlineHelpText>close up of PVS5 / Inverter Serial number</inlineHelpText>
        <label>Close up of PVS5 / Inverter Serial #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>photos_of_the_serial_number_map_JCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did you get photos of the serial number map and accurate as-built drawing?</description>
        <inlineHelpText>Did you get photos of the serial number map and accurate as-built drawing?</inlineHelpText>
        <label>photos of the serial number map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>shut_off_valve_installed_on_the_gas_main__c</fullName>
        <description>Is a shut off valve installed on the gas main?</description>
        <inlineHelpText>Is a shut off valve installed on the gas main?</inlineHelpText>
        <label>shut off valve installed on the gas main</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Task__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FORM-{0000}</displayFormat>
        <label>Forms Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <recordTypes>
        <fullName>Job_Checkout_Form</fullName>
        <active>true</active>
        <label>Job Checkout Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Hazard_Analysis</fullName>
        <active>true</active>
        <label>Job Hazard Analysis</label>
    </recordTypes>
    <recordTypes>
        <fullName>Site_Survey_Form</fullName>
        <active>true</active>
        <label>Site Survey Form</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>